@@ -1,17 +1,20 @@
 package com.flipkart.varadhi;
 
 import com.flipkart.varadhi.auth.DefaultAuthorizationProvider;
+import com.flipkart.varadhi.cluster.VaradhiClusterManager;
+import com.flipkart.varadhi.components.controller.ControllerApiProxy;
 import com.flipkart.varadhi.config.RestOptions;
-import com.flipkart.varadhi.config.ServerConfig;
+import com.flipkart.varadhi.config.AppConfiguration;
 import com.flipkart.varadhi.core.VaradhiTopicFactory;
 import com.flipkart.varadhi.core.VaradhiTopicService;
+import com.flipkart.varadhi.core.cluster.ControllerApi;
 import com.flipkart.varadhi.exceptions.VaradhiException;
 import com.flipkart.varadhi.produce.otel.ProducerMetricHandler;
 import com.flipkart.varadhi.produce.services.ProducerService;
 import com.flipkart.varadhi.services.*;
+import com.flipkart.varadhi.spi.db.IamPolicyMetaStore;
 import com.flipkart.varadhi.spi.db.MetaStore;
 import com.flipkart.varadhi.spi.db.MetaStoreProvider;
-import com.flipkart.varadhi.spi.db.RoleBindingMetaStore;
 import com.flipkart.varadhi.spi.services.MessagingStackProvider;
 import com.flipkart.varadhi.web.*;
 import com.flipkart.varadhi.web.routes.RouteBehaviour;
@@ -25,6 +28,7 @@ import com.flipkart.varadhi.web.v1.produce.HeaderValidationHandler;
 import com.flipkart.varadhi.web.v1.produce.ProduceHandlers;
 import io.micrometer.core.instrument.MeterRegistry;
 import io.opentelemetry.api.trace.Tracer;
+import io.vertx.core.Future;
 import io.vertx.core.Vertx;
 import lombok.extern.slf4j.Slf4j;
 
@@ -33,7 +37,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 
@@ -46,15 +49,15 @@ public abstract class VerticleDeployer {
     private final ProduceHandlers produceHandlers;
     private final SubscriptionHandlers subscriptionHandlers;
     private final HealthCheckHandler healthCheckHandler;
-    private final Supplier<IamPolicyHandlers> authZHandlersSupplier;
+    private final Supplier<IamPolicyHandlers> iamPolicyHandlersSupplier;
     private final Map<RouteBehaviour, RouteConfigurator> behaviorConfigurators = new HashMap<>();
 
     public VerticleDeployer(
-            String hostName,
             Vertx vertx,
-            ServerConfig configuration,
+            AppConfiguration configuration,
             MessagingStackProvider messagingStackProvider,
             MetaStoreProvider metaStoreProvider,
+            VaradhiClusterManager clusterManager,
             MeterRegistry meterRegistry,
             Tracer tracer
     ) {
@@ -85,8 +88,11 @@ public abstract class VerticleDeployer {
                         deployedRegion, headerValidator::validate, producerService, projectService,
                         producerMetricsHandler
                 );
-        this.authZHandlersSupplier = getIamPolicyHandlersSupplier(projectService, metaStore);
-        this.subscriptionHandlers = new SubscriptionHandlers(new SubscriptionService(metaStore), projectService);
+
+        this.iamPolicyHandlersSupplier = getIamPolicyHandlersSupplier(projectService, metaStore);
+        ControllerApi controllerApiProxy = new ControllerApiProxy(clusterManager.getExchange(vertx));
+        SubscriptionService subscriptionService = new SubscriptionService(metaStore, controllerApiProxy);
+        this.subscriptionHandlers = new SubscriptionHandlers(subscriptionService, projectService);
         this.healthCheckHandler = new HealthCheckHandler();
 
         AuthnHandler authnHandler = new AuthnHandler(vertx, configuration);
@@ -109,13 +115,13 @@ public abstract class VerticleDeployer {
             ProjectService projectService, MetaStore metaStore
     ) {
         return () -> {
-            if (metaStore instanceof RoleBindingMetaStore rbMetaStore) {
+            if (metaStore instanceof IamPolicyMetaStore rbMetaStore) {
                 return new IamPolicyHandlers(
                         projectService,
                         new IamPolicyService(metaStore, rbMetaStore)
                 );
             }
-            throw new IllegalStateException("MetaStore is not an instance of RoleBindingMetaStore.");
+            throw new IllegalStateException("MetaStore is not an instance of IamPolicyMetaStore.");
         };
     }
 
@@ -127,31 +133,29 @@ public abstract class VerticleDeployer {
                         healthCheckHandler.get()
                 )
                 .flatMap(Collection::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public void deployVerticle(Vertx vertx, ServerConfig configuration) {
+    public Future<String> deployVerticle(Vertx vertx, AppConfiguration configuration) {
         List<RouteDefinition> handlerDefinitions = getRouteDefinitions();
         if (shouldEnableAuthZHandlers(configuration)) {
-            handlerDefinitions.addAll(authZHandlersSupplier.get().get());
+            handlerDefinitions.addAll(iamPolicyHandlersSupplier.get().get());
         }
-        vertx.deployVerticle(
-                        () -> new RestVerticle(
-                                handlerDefinitions,
-                                behaviorConfigurators,
-                                new FailureHandler(),
-                                configuration.getHttpServerOptions()
-                        ),
-                        configuration.getVerticleDeploymentOptions()
-                )
-                .onFailure(t -> {
-                    log.error("Could not start HttpServer Verticle.", t);
-                    throw new VaradhiException("Failed to Deploy Rest API.", t);
-                })
-                .onSuccess(name -> log.debug("Successfully deployed the Verticle id({}).", name));
+        return vertx.deployVerticle(
+                () -> new RestVerticle(
+                        handlerDefinitions,
+                        behaviorConfigurators,
+                        new FailureHandler(),
+                        configuration.getHttpServerOptions()
+                ),
+                configuration.getVerticleDeploymentOptions()
+        ).onFailure(t -> {
+            log.error("Could not start HttpServer Verticle.", t);
+            throw new VaradhiException("Failed to Deploy Rest API.", t);
+        }).onSuccess(name -> log.debug("Successfully deployed the Verticle id({}).", name));
     }
 
-    private boolean shouldEnableAuthZHandlers(ServerConfig configuration) {
+    private boolean shouldEnableAuthZHandlers(AppConfiguration configuration) {
         String defaultProviderClass = DefaultAuthorizationProvider.class.getName();
         return configuration.isAuthorizationEnabled()
                 && defaultProviderClass.equals(configuration.getAuthorization().getProviderClassName());
